Changelog
=========

3.9-dev0 - (unreleased)
---------------------------

3.8 - (2022-01-13)
---------------------------
* [bugfix] fix PCP set/unset
  [valipod refs #143780]

3.7 - (2021-12-17)
---------------------------
* [bugfix] fix initialisation of datatables
  [valipod refs #142972]

3.6 - (2021-12-09)
---------------------------
* [feature] tables in nfp_nrc set to datatable
  [valipod refs #142972]

3.5 - (2021-11-22)
---------------------------
* fix typo in role id
  [valipod]

3.4 - (2021-11-19)
---------------------------
* fix PCP incorrectly shown on all sibling roles
  [valipod refs #140578]
* update climatecangeadaptation and climatechangemitigation role names
  [valipod refs #140578]
* fix PCP label (incorrectly shown as Mn)
  [valipod refs #140578]

3.3 - (2021-11-12)
---------------------------
* changes to support the new Eionet Groups replacing the NFP branch
  [valipod refs #140578]

3.2 - (2021-04-28)
---------------------------
* Change: Two bugfixes
  [valipod]

3.1 - (2021-04-27)
---------------------------
* display real organisation membership instead of the 'o' property in
  role listing of members [dumitval]
* add password age and expiration status to the user export from roles
  (managers only) [dumitval]

3.0 - (2021-04-15)
---------------------------
* restrict available organisations to own country when NFP edits users
  [valipod]

2.9 - (2021-04-12)
---------------------------
* restrict adding members to NRC and AWP roles to users from
  organisations from the NFP's country [dumitval]

2.8 - (2021-04-09)
---------------------------
* fix creation of eu/int organisations (and add un) [dumitval]
* re-enable user editing by NFP if the user belongs to the NFP country
  [dumitval]
* list all organisations for NFP, edit only on country orgs [dumitval]

2.7 - (2021-02-15)
---------------------------
* remove dependency on validate_email [dumitval]
* improve/fix extranet_reporters listing - allow any nubmer of bits